[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
dot = "0.1.4"
line-span = "0.1.5"
owo-colors = "4.0.0"
slotmap = "1.0.7"
smallvec = { version = "1.13.1", features = ["union", "const_generics"] }
winnow = "0.5.33"
